fix overflow in css

--- a/frontend/src/components/course/heatmap.css
+++ b/frontend/src/components/course/heatmap.css
@@ -1,8 +1,9 @@
 .scrollSyncTable {
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
   position: relative;
+  max-height: 70vh;
 }
 
 table {
